// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works 1`] = `
.c0 {
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
}

.c1 {
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<button
  class="c0"
  elevation="1"
  type="button"
>
  <div
    class="c1"
  >
    Hello world
  </div>
</button>
`;

exports[`it works with anchor 1`] = `
.c0 {
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
}

.c1 {
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<a
  class="c0"
  elevation="1"
  href="https://google.com"
  target="_blank"
>
  <div
    class="c1"
  >
    Hello world
  </div>
</a>
`;

exports[`it works with icon 1`] = `
.c0 {
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
}

.c1 {
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<button
  class="c0"
  elevation="1"
  type="button"
>
  <div
    class="c1"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle "
      data-icon="circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      style="margin-right: 0.5rem;"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256z"
        fill="currentColor"
      />
    </svg>
    Hello world
  </div>
</button>
`;

exports[`it works with loading 1`] = `
.c0 {
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
}

.c1 {
  opacity: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  position: absolute;
  top: calc(50% - 0.375rem);
  right: 0;
  left: 0;
  width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c3 {
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  border-radius: 0.6rem;
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  border-style: solid;
  border-radius: 0.6rem;
  border-width: 1px;
  width: 100%;
  height: 0.75rem;
  background-color: #fafafa;
  border-color: #d4d4d4;
}

.c5 {
  position: relative;
  top: -1px;
  left: 0;
  border-radius: 0.6rem;
  width: 1.5rem;
  height: 0.75rem;
  background-color: #d4d4d4;
}

.c6 {
  -webkit-animation: igSzjp;
  animation: igSzjp;
  -webkit-transform: translateX(50%);
  -ms-transform: translateX(50%);
  transform: translateX(50%);
  left: -50%;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-duration: 0.6s;
  animation-duration: 0.6s;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
  -webkit-animation-timing-function: cubic-bezier(0.68,-0.9,0.32,1.9);
  animation-timing-function: cubic-bezier(0.68,-0.9,0.32,1.9);
}

<button
  class="c0"
  elevation="1"
  type="button"
>
  <div
    class="c1"
  >
    Hello world
  </div>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div
          class="c5 c6"
        />
      </div>
    </div>
  </div>
</button>
`;

exports[`it works with size large 1`] = `
.c0 {
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
}

.c1 {
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<button
  class="c0"
  elevation="1"
  type="button"
>
  <div
    class="c1"
  >
    Hello world
  </div>
</button>
`;

exports[`it works with size medium 1`] = `
.c0 {
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
}

.c1 {
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<button
  class="c0"
  elevation="1"
  type="button"
>
  <div
    class="c1"
  >
    Hello world
  </div>
</button>
`;

exports[`it works with size small 1`] = `
.c0 {
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
}

.c1 {
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<button
  class="c0"
  elevation="1"
  type="button"
>
  <div
    class="c1"
  >
    Hello world
  </div>
</button>
`;
